Increase readability with Math.clamp library method